tests/sources/invalid/classes/instance_method_arg_type.fire
// Semantic error: instance method call with an argument of the wrong type.

class Counter {
    value: int32;

    fn Counter(value: int32) {
        this.value = value;
    }

    fn add(amount: int32) -> int32 {
        return this.value + amount;
    }
}

fn instance_method_arg_type() -> void {
    c: Counter = new Counter(0);
    c.add("not a number");  //~ ERROR FS-SEM-0010 @11
}
